--- a/TodoList.Api/appsettings.Development.json
+++ b/TodoList.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AWS": {
+    "AccessKey": "user-secrets:AWS:AccessKey",
+    "SecretKey": "user-secrets:AWS:SecretKey"
   }
 }
