--- a/TodoList.Core/TodoList.Core.csproj
+++ b/TodoList.Core/TodoList.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.SQS" Version="3.7.200.55" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
