--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Upload artifacts to S3
         run: |
-          aws s3 cp artifacts/ s3://todolist.api/builds/ --recursive --debug
+          aws s3 cp artifacts/ s3://todolist.api/builds/ --recursive --region ap-southeast-2 --debug
 
       - name: Deploy using CodeDeploy
         run: |
-          aws deploy create-deployment --application-name TodoList.Api --deployment-group-name TodoList.Api_DeploymentGroup --s3-location bucket=todolist.api,bundleType=zip,key=builds/
+          aws deploy create-deployment --region ap-southeast-2 --application-name TodoList.Api --deployment-group-name TodoList.Api_DeploymentGroup --s3-location bucket=todolist.api,bundleType=zip,key=builds/
