--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Deploy using CodeDeploy
         run: |
-          aws deploy create-deployment --region ap-southeast-2 --application-name TodoList.Api --deployment-group-name TodoList.Api_DeploymentGroup --s3-location bucket=todolist.api,bundleType=zip,key=builds/
+          aws deploy create-deployment --region ap-southeast-2 --debug --application-name TodoList.Api --deployment-group-name TodoList.Api_DeploymentGroup --s3-location bucket=todolist.api,bundleType=zip,key=builds/
