--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,8 +20,8 @@ jobs:
         dotnet-version: 6.0.x
     - name: Build
       run: dotnet build
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    # - name: Test
+    #   run: dotnet test --no-build --verbosity normal
     - name: Publish
       run: dotnet publish -c Release -o ./publish
     - name: zip publish
@@ -35,7 +35,7 @@ jobs:
         aws-region: ap-southeast-2
     - name: Upload artifacts to S3
       run: |
-        aws s3 cp ./publish s3://todolist.api/artifacts/ --recursive --debug
+        aws s3 cp ./publish/publish.zip s3://todolist.api/artifacts/ --recursive --debug
 
       # - name: Deploy using CodeDeploy
       #   run: |
