--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,10 @@ jobs:
       run: dotnet publish -c Release -o ./publish
     - name: zip publish
       run: Compress-Archive -Path ./publish -DestinationPath ./publish/publish.zip
-      
+  deploy:
+    runs-on: windows-latest
+    needs: build
+    steps:
     - name: Configure AWS credentials from Test account
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -35,7 +38,7 @@ jobs:
         aws-region: ap-southeast-2
     - name: Upload artifacts to S3
       run: |
-        aws s3 cp ./publish/publish.zip s3://todolist.api/artifacts/ --recursive --debug
+        aws s3 cp ./publish s3://todolist.api/artifacts/ --recursive --debug
 
       # - name: Deploy using CodeDeploy
       #   run: |
