--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,9 +36,12 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-2
+    - name: Debug - List files in publish directory
+      run: |
+        ls ./publish
     - name: Upload artifacts to S3
       run: |
-        aws s3 cp ./publish/publish.zip s3://todolist.api/artifacts/ --recursive --debug
+        aws s3 cp ./publish/publish.zip s3://todolist.api/artifacts/ --debug
 
       # - name: Deploy using CodeDeploy
       #   run: |
