--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,10 +43,20 @@ jobs:
       run: |
         aws s3 cp ./publish/publish.zip s3://todolist.api/artifacts/ --debug
 
-      # - name: Deploy using CodeDeploy
-      #   run: |
-      #     aws deploy create-deployment --region ap-southeast-2 --debug --application-name TodoList.Api --deployment-group-name TodoList.Api_DeploymentGroup --s3-location bucket=todolist.api,bundleType=zip,key=builds/
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  deploy:
+    runs-on: windows-latest
+    needs: build
+    steps:
+      - name: Configure AWS credentials from Test account
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-2
+      - name: Deploy using CodeDeploy
+        run: |
+          aws deploy create-deployment \
+            --application-name TodoList.Api \
+            --deployment-group-name TodoList.Api_DeploymentGroup \
+            --s3-location bucket=todolist.api,bundleType=zip,key=artifacts/publish.zip --debug
           
